<resources>
    <string name="app_name">Esp32 - Bluetooth</string>
    <string name="title_bluetooth">Bluetooth</string>
    <string name="title_commands">Commands</string>
    <string name="title_roboarm">RoboArm</string>
    <string name="button_send">OK</string>
    <string name="scan">Procurar</string>
    <string name="disconnect">Desconectar</string>
    <string name="roboarm">RoboArm</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_speed1">Speed 1</string>
    <string name="button_speed2">Speed 2</string>
</resources>